--- a/attachment_multiple_records/wizards/document_wizard_view.xml
+++ b/attachment_multiple_records/wizards/document_wizard_view.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" ?>
 <openerp>
 <data>
 
@@ -10,15 +10,20 @@
         <group string="Select document(s)" colspan="4">
           <field name="attachment_ids" nolabel="1">
             <tree string="AttachmentDocumentWizardTree">
-                <field name="name"/>
-                <field name="create_uid"/>
-                <field name="create_date"/>
-                <field name="type"/>
+                <field name="name" />
+                <field name="create_uid" />
+                <field name="create_date" />
+                <field name="type" />
             </tree>
           </field>
         </group>
         <footer>
-            <button string="Apply" name="action_apply" type="object" class="oe_highlight"/>
+            <button
+                            string="Apply"
+                            name="action_apply"
+                            type="object"
+                            class="oe_highlight"
+                        />
             or
             <button string="Cancel" class="oe_link" special="cancel" />
         </footer>
@@ -32,7 +37,7 @@
     <field name="res_model">ir.attachment.existing.doc</field>
     <field name="view_type">form</field>
     <field name="view_mode">tree,form</field>
-    <field name="view_id" ref="document_form_view"/>
+    <field name="view_id" ref="document_form_view" />
     <field name="target">new</field>
   </record>
 
